Update from https://github.com/thebesttv/eserver-static/commit/0166225ad55d507a0f0e5f5f1cc460da2595b8f9

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-16 15:25 -->
+<!-- 2022-10-17 02:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,47 +36,47 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgcb92910">1. 妙妙文章</a>
+<li><a href="#org39518c0">1. 妙妙文章</a>
 <ul>
-<li><a href="#org58ba006">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orga186292">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org6fb25c3">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org3b38f01">1.4. 关于编辑器</a></li>
-<li><a href="#org40a5fc8">1.5. 关于代码</a>
+<li><a href="#orga5cf9cb">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgac13b1e">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org90dbc55">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org4372498">1.4. 关于编辑器</a></li>
+<li><a href="#org3b2f160">1.5. 关于代码</a>
 <ul>
-<li><a href="#orgd5633f3">1.5.1. Lisp</a></li>
+<li><a href="#orgd45561b">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org5b95c91">1.6. 关于CPU</a></li>
-<li><a href="#orge05e93e">1.7. 关于算法</a>
+<li><a href="#org7755b05">1.6. 关于CPU</a></li>
+<li><a href="#orgc91178f">1.7. 关于算法</a>
 <ul>
-<li><a href="#org8bcf27a">1.7.1. 关于随机</a></li>
+<li><a href="#org0fc9970">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgcee82ed">1.8. 关于AI</a></li>
-<li><a href="#org5273398">1.9. 关于软件</a>
+<li><a href="#org45d8ef0">1.8. 关于AI</a></li>
+<li><a href="#org9319c2b">1.9. 关于软件</a>
 <ul>
-<li><a href="#org3bdc720">1.9.1. SQLite</a></li>
+<li><a href="#org5af40c0">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgf171e1a">1.10. 关于workflow</a></li>
+<li><a href="#org0c4a0b9">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org4b5fe69">2. 棒棒视频</a>
+<li><a href="#orgc51e39d">2. 棒棒视频</a>
 <ul>
-<li><a href="#org08c687b">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org8e8ec6f">2.2. 各种剧</a></li>
-<li><a href="#org0e8388f">2.3. 电影</a></li>
+<li><a href="#orgabd6c1d">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgb1a24b6">2.2. 各种剧</a></li>
+<li><a href="#org83aacaf">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org0e0f1ef">3. 快乐游戏</a></li>
-<li><a href="#org478dc24">4. 宝藏博主</a></li>
-<li><a href="#orgd649805">5. 有意思的</a>
+<li><a href="#orgeb41eda">3. 快乐游戏</a></li>
+<li><a href="#org00fd7f9">4. 宝藏博主</a></li>
+<li><a href="#org3afa2ef">5. 有意思的</a>
 <ul>
-<li><a href="#orga351aa3">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgc89dd52">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org8118136">6. 我想玩的</a></li>
+<li><a href="#org82cc03a">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -85,8 +85,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgcb92910" class="outline-2">
-<h2 id="orgcb92910"><span class="section-number-2">1.</span> <a href="#orgcb92910">妙妙文章</a></h2>
+<div id="outline-container-org39518c0" class="outline-2">
+<h2 id="org39518c0"><span class="section-number-2">1.</span> <a href="#org39518c0">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -423,7 +423,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org4be3fb3">
+<figure id="org427d322">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -474,8 +474,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org58ba006" class="outline-3">
-<h3 id="org58ba006"><span class="section-number-3">1.1.</span> <a href="#org58ba006">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orga5cf9cb" class="outline-3">
+<h3 id="orga5cf9cb"><span class="section-number-3">1.1.</span> <a href="#orga5cf9cb">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -516,8 +516,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orga186292" class="outline-3">
-<h3 id="orga186292"><span class="section-number-3">1.2.</span> <a href="#orga186292">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgac13b1e" class="outline-3">
+<h3 id="orgac13b1e"><span class="section-number-3">1.2.</span> <a href="#orgac13b1e">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -547,8 +547,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org6fb25c3" class="outline-3">
-<h3 id="org6fb25c3"><span class="section-number-3">1.3.</span> <a href="#org6fb25c3">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org90dbc55" class="outline-3">
+<h3 id="org90dbc55"><span class="section-number-3">1.3.</span> <a href="#org90dbc55">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -582,8 +582,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org3b38f01" class="outline-3">
-<h3 id="org3b38f01"><span class="section-number-3">1.4.</span> <a href="#org3b38f01">关于编辑器</a></h3>
+<div id="outline-container-org4372498" class="outline-3">
+<h3 id="org4372498"><span class="section-number-3">1.4.</span> <a href="#org4372498">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -599,8 +599,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org40a5fc8" class="outline-3">
-<h3 id="org40a5fc8"><span class="section-number-3">1.5.</span> <a href="#org40a5fc8">关于代码</a></h3>
+<div id="outline-container-org3b2f160" class="outline-3">
+<h3 id="org3b2f160"><span class="section-number-3">1.5.</span> <a href="#org3b2f160">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -625,8 +625,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgd5633f3" class="outline-4">
-<h4 id="orgd5633f3"><span class="section-number-4">1.5.1.</span> <a href="#orgd5633f3">Lisp</a></h4>
+<div id="outline-container-orgd45561b" class="outline-4">
+<h4 id="orgd45561b"><span class="section-number-4">1.5.1.</span> <a href="#orgd45561b">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -649,8 +649,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org5b95c91" class="outline-3">
-<h3 id="org5b95c91"><span class="section-number-3">1.6.</span> <a href="#org5b95c91">关于CPU</a></h3>
+<div id="outline-container-org7755b05" class="outline-3">
+<h3 id="org7755b05"><span class="section-number-3">1.6.</span> <a href="#org7755b05">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -665,8 +665,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orge05e93e" class="outline-3">
-<h3 id="orge05e93e"><span class="section-number-3">1.7.</span> <a href="#orge05e93e">关于算法</a></h3>
+<div id="outline-container-orgc91178f" class="outline-3">
+<h3 id="orgc91178f"><span class="section-number-3">1.7.</span> <a href="#orgc91178f">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -685,8 +685,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org8bcf27a" class="outline-4">
-<h4 id="org8bcf27a"><span class="section-number-4">1.7.1.</span> <a href="#org8bcf27a">关于随机</a></h4>
+<div id="outline-container-org0fc9970" class="outline-4">
+<h4 id="org0fc9970"><span class="section-number-4">1.7.1.</span> <a href="#org0fc9970">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -700,8 +700,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgcee82ed" class="outline-3">
-<h3 id="orgcee82ed"><span class="section-number-3">1.8.</span> <a href="#orgcee82ed">关于AI</a></h3>
+<div id="outline-container-org45d8ef0" class="outline-3">
+<h3 id="org45d8ef0"><span class="section-number-3">1.8.</span> <a href="#org45d8ef0">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -711,8 +711,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org5273398" class="outline-3">
-<h3 id="org5273398"><span class="section-number-3">1.9.</span> <a href="#org5273398">关于软件</a></h3>
+<div id="outline-container-org9319c2b" class="outline-3">
+<h3 id="org9319c2b"><span class="section-number-3">1.9.</span> <a href="#org9319c2b">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org3bdc720" class="outline-4">
-<h4 id="org3bdc720"><span class="section-number-4">1.9.1.</span> <a href="#org3bdc720">SQLite</a></h4>
+<div id="outline-container-org5af40c0" class="outline-4">
+<h4 id="org5af40c0"><span class="section-number-4">1.9.1.</span> <a href="#org5af40c0">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -738,8 +738,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgf171e1a" class="outline-3">
-<h3 id="orgf171e1a"><span class="section-number-3">1.10.</span> <a href="#orgf171e1a">关于workflow</a></h3>
+<div id="outline-container-org0c4a0b9" class="outline-3">
+<h3 id="org0c4a0b9"><span class="section-number-3">1.10.</span> <a href="#org0c4a0b9">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -749,8 +749,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org4b5fe69" class="outline-2">
-<h2 id="org4b5fe69"><span class="section-number-2">2.</span> <a href="#org4b5fe69">棒棒视频</a></h2>
+<div id="outline-container-orgc51e39d" class="outline-2">
+<h2 id="orgc51e39d"><span class="section-number-2">2.</span> <a href="#orgc51e39d">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -805,8 +805,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org08c687b" class="outline-3">
-<h3 id="org08c687b"><span class="section-number-3">2.1.</span> <a href="#org08c687b">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgabd6c1d" class="outline-3">
+<h3 id="orgabd6c1d"><span class="section-number-3">2.1.</span> <a href="#orgabd6c1d">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -831,8 +831,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8e8ec6f" class="outline-3">
-<h3 id="org8e8ec6f"><span class="section-number-3">2.2.</span> <a href="#org8e8ec6f">各种剧</a></h3>
+<div id="outline-container-orgb1a24b6" class="outline-3">
+<h3 id="orgb1a24b6"><span class="section-number-3">2.2.</span> <a href="#orgb1a24b6">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -856,8 +856,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0e8388f" class="outline-3">
-<h3 id="org0e8388f"><span class="section-number-3">2.3.</span> <a href="#org0e8388f">电影</a></h3>
+<div id="outline-container-org83aacaf" class="outline-3">
+<h3 id="org83aacaf"><span class="section-number-3">2.3.</span> <a href="#org83aacaf">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -883,8 +883,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0e0f1ef" class="outline-2">
-<h2 id="org0e0f1ef"><span class="section-number-2">3.</span> <a href="#org0e0f1ef">快乐游戏</a></h2>
+<div id="outline-container-orgeb41eda" class="outline-2">
+<h2 id="orgeb41eda"><span class="section-number-2">3.</span> <a href="#orgeb41eda">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -913,8 +913,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org478dc24" class="outline-2">
-<h2 id="org478dc24"><span class="section-number-2">4.</span> <a href="#org478dc24">宝藏博主</a></h2>
+<div id="outline-container-org00fd7f9" class="outline-2">
+<h2 id="org00fd7f9"><span class="section-number-2">4.</span> <a href="#org00fd7f9">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -925,7 +925,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org9452f23">
+<figure id="org6d2feda">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -933,8 +933,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd649805" class="outline-2">
-<h2 id="orgd649805"><span class="section-number-2">5.</span> <a href="#orgd649805">有意思的</a></h2>
+<div id="outline-container-org3afa2ef" class="outline-2">
+<h2 id="org3afa2ef"><span class="section-number-2">5.</span> <a href="#org3afa2ef">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -966,8 +966,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orga351aa3" class="outline-3">
-<h3 id="orga351aa3"><span class="section-number-3">5.1.</span> <a href="#orga351aa3">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgc89dd52" class="outline-3">
+<h3 id="orgc89dd52"><span class="section-number-3">5.1.</span> <a href="#orgc89dd52">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -979,8 +979,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org8118136" class="outline-2">
-<h2 id="org8118136"><span class="section-number-2">6.</span> <a href="#org8118136">我想玩的</a></h2>
+<div id="outline-container-org82cc03a" class="outline-2">
+<h2 id="org82cc03a"><span class="section-number-2">6.</span> <a href="#org82cc03a">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1003,7 +1003,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-16 15:24</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-16 15:25</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-17 02:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
