--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-16 15:25 -->
+<!-- 2022-10-17 02:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -36,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org33020dc">1. 暑假</a>
+<li><a href="#orgb6d9848">1. 暑假</a>
 <ul>
-<li><a href="#org101c286">1.1. 夏令营</a></li>
+<li><a href="#orgda390ff">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgce3853b">2. 打工</a></li>
-<li><a href="#org3a20d0a">3. 我的928</a>
+<li><a href="#org82e46f6">2. 打工</a></li>
+<li><a href="#org1b8f041">3. 我的928</a>
 <ul>
-<li><a href="#org8c22f53">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orgc312366">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org4ffcf84">4. 他们的928</a></li>
-<li><a href="#orge99fcfe">5. 总结</a></li>
+<li><a href="#orgd44d3d0">4. 他们的928</a></li>
+<li><a href="#org2bacfd1">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -58,7 +58,7 @@
 </p>
 
 
-<figure id="org4791376">
+<figure id="orgdfa0cd9">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -81,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org33020dc" class="outline-2">
-<h2 id="org33020dc"><span class="section-number-2">1.</span> <a href="#org33020dc">暑假</a></h2>
+<div id="outline-container-orgb6d9848" class="outline-2">
+<h2 id="orgb6d9848"><span class="section-number-2">1.</span> <a href="#orgb6d9848">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -106,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-org101c286" class="outline-3">
-<h3 id="org101c286"><span class="section-number-3">1.1.</span> <a href="#org101c286">夏令营</a></h3>
+<div id="outline-container-orgda390ff" class="outline-3">
+<h3 id="orgda390ff"><span class="section-number-3">1.1.</span> <a href="#orgda390ff">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -149,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgce3853b" class="outline-2">
-<h2 id="orgce3853b"><span class="section-number-2">2.</span> <a href="#orgce3853b">打工</a></h2>
+<div id="outline-container-org82e46f6" class="outline-2">
+<h2 id="org82e46f6"><span class="section-number-2">2.</span> <a href="#org82e46f6">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -164,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org3a20d0a" class="outline-2">
-<h2 id="org3a20d0a"><span class="section-number-2">3.</span> <a href="#org3a20d0a">我的928</a></h2>
+<div id="outline-container-org1b8f041" class="outline-2">
+<h2 id="org1b8f041"><span class="section-number-2">3.</span> <a href="#org1b8f041">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -181,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org8c22f53" class="outline-3">
-<h3 id="org8c22f53"><span class="section-number-3">3.1.</span> <a href="#org8c22f53">928演唱会(bushi</a></h3>
+<div id="outline-container-orgc312366" class="outline-3">
+<h3 id="orgc312366"><span class="section-number-3">3.1.</span> <a href="#orgc312366">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -190,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgc6f0e05">
+<figure id="org2777bc0">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -202,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org7db3836">
+<figure id="org9a40dc6">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -215,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org4ffcf84" class="outline-2">
-<h2 id="org4ffcf84"><span class="section-number-2">4.</span> <a href="#org4ffcf84">他们的928</a></h2>
+<div id="outline-container-orgd44d3d0" class="outline-2">
+<h2 id="orgd44d3d0"><span class="section-number-2">4.</span> <a href="#orgd44d3d0">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -236,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge99fcfe" class="outline-2">
-<h2 id="orge99fcfe"><span class="section-number-2">5.</span> <a href="#orge99fcfe">总结</a></h2>
+<div id="outline-container-org2bacfd1" class="outline-2">
+<h2 id="org2bacfd1"><span class="section-number-2">5.</span> <a href="#org2bacfd1">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -252,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-16 15:25</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-17 02:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
