--- a/content/qq-group-export.html
+++ b/content/qq-group-export.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-16 15:25 -->
+<!-- 2022-10-17 02:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>导出QQ群成员</title>
@@ -36,15 +36,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc9a6242">1. 导出成员</a></li>
-<li><a href="#orga6a2dae">2. 交叉对比</a></li>
+<li><a href="#orgd390de7">1. 导出成员</a></li>
+<li><a href="#orgb3092a3">2. 交叉对比</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgc9a6242" class="outline-2">
-<h2 id="orgc9a6242"><span class="section-number-2">1.</span> <a href="#orgc9a6242">导出成员</a></h2>
+<div id="outline-container-orgd390de7" class="outline-2">
+<h2 id="orgd390de7"><span class="section-number-2">1.</span> <a href="#orgd390de7">导出成员</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 来自: <a href="https://www.zhihu.com/question/58753010/answer/1354673772">如何批量导出QQ群成员的QQ号/QQ邮箱等相关信息？ - 大发撸卡的回答 - 知乎</a>
@@ -72,8 +72,8 @@ console.log(t);
 </div>
 </div>
 
-<div id="outline-container-orga6a2dae" class="outline-2">
-<h2 id="orga6a2dae"><span class="section-number-2">2.</span> <a href="#orga6a2dae">交叉对比</a></h2>
+<div id="outline-container-orgb3092a3" class="outline-2">
+<h2 id="orgb3092a3"><span class="section-number-2">2.</span> <a href="#orgb3092a3">交叉对比</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 交叉对比两个群的QQ号:
@@ -94,7 +94,7 @@ console.log(t);
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-29 16:05</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 16:09</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-16 15:25</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-17 02:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/qq-group-export.org">content/qq-group-export.org</a></td></tr>
 </table>
