Update from https://github.com/thebesttv/eserver-static/commit/0166225ad55d507a0f0e5f5f1cc460da2595b8f9

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-19 03:04 -->
+<!-- 2022-10-20 03:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,47 +36,47 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgdb20f25">1. 妙妙文章</a>
+<li><a href="#org3255586">1. 妙妙文章</a>
 <ul>
-<li><a href="#orgccf8fce">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org6f93f07">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orga3c6c5b">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org7cd356c">1.4. 关于编辑器</a></li>
-<li><a href="#org3e6dd6b">1.5. 关于代码</a>
+<li><a href="#org950959b">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org515ee97">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org5e0ef4a">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgdaeeca2">1.4. 关于编辑器</a></li>
+<li><a href="#orgf7b980c">1.5. 关于代码</a>
 <ul>
-<li><a href="#orgc3c38c4">1.5.1. Lisp</a></li>
+<li><a href="#org26a9117">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org001074e">1.6. 关于CPU</a></li>
-<li><a href="#org2a72dbc">1.7. 关于算法</a>
+<li><a href="#orgc10c88e">1.6. 关于CPU</a></li>
+<li><a href="#org98d2fc9">1.7. 关于算法</a>
 <ul>
-<li><a href="#orga489222">1.7.1. 关于随机</a></li>
+<li><a href="#orgc2dcb71">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org5c7c03e">1.8. 关于AI</a></li>
-<li><a href="#orga4264cc">1.9. 关于软件</a>
+<li><a href="#org33ff8fa">1.8. 关于AI</a></li>
+<li><a href="#org3b90d84">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgf51e73f">1.9.1. SQLite</a></li>
+<li><a href="#orgc96b37c">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org2b4b3cf">1.10. 关于workflow</a></li>
+<li><a href="#org74df9a9">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org82c3b90">2. 棒棒视频</a>
+<li><a href="#org5f8eb7d">2. 棒棒视频</a>
 <ul>
-<li><a href="#org3b3c9dd">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org382f33c">2.2. 各种剧</a></li>
-<li><a href="#org376035f">2.3. 电影</a></li>
+<li><a href="#org2b795ea">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org23a3e87">2.2. 各种剧</a></li>
+<li><a href="#org00c10db">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgd37ca38">3. 快乐游戏</a></li>
-<li><a href="#org3ce0747">4. 宝藏博主</a></li>
-<li><a href="#org9827862">5. 有意思的</a>
+<li><a href="#orgcaa106e">3. 快乐游戏</a></li>
+<li><a href="#org1585d8d">4. 宝藏博主</a></li>
+<li><a href="#org12ef97a">5. 有意思的</a>
 <ul>
-<li><a href="#org4b8be7d">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgf35dc8c">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org16fab62">6. 我想玩的</a></li>
+<li><a href="#org0fd8c10">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -85,8 +85,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgdb20f25" class="outline-2">
-<h2 id="orgdb20f25"><span class="section-number-2">1.</span> <a href="#orgdb20f25">妙妙文章</a></h2>
+<div id="outline-container-org3255586" class="outline-2">
+<h2 id="org3255586"><span class="section-number-2">1.</span> <a href="#org3255586">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -423,7 +423,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org44a4c71">
+<figure id="orge3b11de">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -474,8 +474,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orgccf8fce" class="outline-3">
-<h3 id="orgccf8fce"><span class="section-number-3">1.1.</span> <a href="#orgccf8fce">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org950959b" class="outline-3">
+<h3 id="org950959b"><span class="section-number-3">1.1.</span> <a href="#org950959b">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -516,8 +516,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org6f93f07" class="outline-3">
-<h3 id="org6f93f07"><span class="section-number-3">1.2.</span> <a href="#org6f93f07">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org515ee97" class="outline-3">
+<h3 id="org515ee97"><span class="section-number-3">1.2.</span> <a href="#org515ee97">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -547,8 +547,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orga3c6c5b" class="outline-3">
-<h3 id="orga3c6c5b"><span class="section-number-3">1.3.</span> <a href="#orga3c6c5b">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org5e0ef4a" class="outline-3">
+<h3 id="org5e0ef4a"><span class="section-number-3">1.3.</span> <a href="#org5e0ef4a">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -582,8 +582,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org7cd356c" class="outline-3">
-<h3 id="org7cd356c"><span class="section-number-3">1.4.</span> <a href="#org7cd356c">关于编辑器</a></h3>
+<div id="outline-container-orgdaeeca2" class="outline-3">
+<h3 id="orgdaeeca2"><span class="section-number-3">1.4.</span> <a href="#orgdaeeca2">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -599,8 +599,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org3e6dd6b" class="outline-3">
-<h3 id="org3e6dd6b"><span class="section-number-3">1.5.</span> <a href="#org3e6dd6b">关于代码</a></h3>
+<div id="outline-container-orgf7b980c" class="outline-3">
+<h3 id="orgf7b980c"><span class="section-number-3">1.5.</span> <a href="#orgf7b980c">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -625,8 +625,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgc3c38c4" class="outline-4">
-<h4 id="orgc3c38c4"><span class="section-number-4">1.5.1.</span> <a href="#orgc3c38c4">Lisp</a></h4>
+<div id="outline-container-org26a9117" class="outline-4">
+<h4 id="org26a9117"><span class="section-number-4">1.5.1.</span> <a href="#org26a9117">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -649,8 +649,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org001074e" class="outline-3">
-<h3 id="org001074e"><span class="section-number-3">1.6.</span> <a href="#org001074e">关于CPU</a></h3>
+<div id="outline-container-orgc10c88e" class="outline-3">
+<h3 id="orgc10c88e"><span class="section-number-3">1.6.</span> <a href="#orgc10c88e">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -665,8 +665,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org2a72dbc" class="outline-3">
-<h3 id="org2a72dbc"><span class="section-number-3">1.7.</span> <a href="#org2a72dbc">关于算法</a></h3>
+<div id="outline-container-org98d2fc9" class="outline-3">
+<h3 id="org98d2fc9"><span class="section-number-3">1.7.</span> <a href="#org98d2fc9">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -685,8 +685,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orga489222" class="outline-4">
-<h4 id="orga489222"><span class="section-number-4">1.7.1.</span> <a href="#orga489222">关于随机</a></h4>
+<div id="outline-container-orgc2dcb71" class="outline-4">
+<h4 id="orgc2dcb71"><span class="section-number-4">1.7.1.</span> <a href="#orgc2dcb71">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -700,8 +700,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org5c7c03e" class="outline-3">
-<h3 id="org5c7c03e"><span class="section-number-3">1.8.</span> <a href="#org5c7c03e">关于AI</a></h3>
+<div id="outline-container-org33ff8fa" class="outline-3">
+<h3 id="org33ff8fa"><span class="section-number-3">1.8.</span> <a href="#org33ff8fa">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -711,8 +711,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orga4264cc" class="outline-3">
-<h3 id="orga4264cc"><span class="section-number-3">1.9.</span> <a href="#orga4264cc">关于软件</a></h3>
+<div id="outline-container-org3b90d84" class="outline-3">
+<h3 id="org3b90d84"><span class="section-number-3">1.9.</span> <a href="#org3b90d84">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgf51e73f" class="outline-4">
-<h4 id="orgf51e73f"><span class="section-number-4">1.9.1.</span> <a href="#orgf51e73f">SQLite</a></h4>
+<div id="outline-container-orgc96b37c" class="outline-4">
+<h4 id="orgc96b37c"><span class="section-number-4">1.9.1.</span> <a href="#orgc96b37c">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -738,8 +738,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org2b4b3cf" class="outline-3">
-<h3 id="org2b4b3cf"><span class="section-number-3">1.10.</span> <a href="#org2b4b3cf">关于workflow</a></h3>
+<div id="outline-container-org74df9a9" class="outline-3">
+<h3 id="org74df9a9"><span class="section-number-3">1.10.</span> <a href="#org74df9a9">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -749,8 +749,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org82c3b90" class="outline-2">
-<h2 id="org82c3b90"><span class="section-number-2">2.</span> <a href="#org82c3b90">棒棒视频</a></h2>
+<div id="outline-container-org5f8eb7d" class="outline-2">
+<h2 id="org5f8eb7d"><span class="section-number-2">2.</span> <a href="#org5f8eb7d">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -805,8 +805,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org3b3c9dd" class="outline-3">
-<h3 id="org3b3c9dd"><span class="section-number-3">2.1.</span> <a href="#org3b3c9dd">Veritasium 真理元素</a></h3>
+<div id="outline-container-org2b795ea" class="outline-3">
+<h3 id="org2b795ea"><span class="section-number-3">2.1.</span> <a href="#org2b795ea">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -831,8 +831,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org382f33c" class="outline-3">
-<h3 id="org382f33c"><span class="section-number-3">2.2.</span> <a href="#org382f33c">各种剧</a></h3>
+<div id="outline-container-org23a3e87" class="outline-3">
+<h3 id="org23a3e87"><span class="section-number-3">2.2.</span> <a href="#org23a3e87">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -856,8 +856,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org376035f" class="outline-3">
-<h3 id="org376035f"><span class="section-number-3">2.3.</span> <a href="#org376035f">电影</a></h3>
+<div id="outline-container-org00c10db" class="outline-3">
+<h3 id="org00c10db"><span class="section-number-3">2.3.</span> <a href="#org00c10db">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -883,8 +883,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd37ca38" class="outline-2">
-<h2 id="orgd37ca38"><span class="section-number-2">3.</span> <a href="#orgd37ca38">快乐游戏</a></h2>
+<div id="outline-container-orgcaa106e" class="outline-2">
+<h2 id="orgcaa106e"><span class="section-number-2">3.</span> <a href="#orgcaa106e">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -913,8 +913,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org3ce0747" class="outline-2">
-<h2 id="org3ce0747"><span class="section-number-2">4.</span> <a href="#org3ce0747">宝藏博主</a></h2>
+<div id="outline-container-org1585d8d" class="outline-2">
+<h2 id="org1585d8d"><span class="section-number-2">4.</span> <a href="#org1585d8d">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -925,7 +925,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgb64fbe9">
+<figure id="orgd88520b">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -933,8 +933,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org9827862" class="outline-2">
-<h2 id="org9827862"><span class="section-number-2">5.</span> <a href="#org9827862">有意思的</a></h2>
+<div id="outline-container-org12ef97a" class="outline-2">
+<h2 id="org12ef97a"><span class="section-number-2">5.</span> <a href="#org12ef97a">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -966,8 +966,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org4b8be7d" class="outline-3">
-<h3 id="org4b8be7d"><span class="section-number-3">5.1.</span> <a href="#org4b8be7d">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgf35dc8c" class="outline-3">
+<h3 id="orgf35dc8c"><span class="section-number-3">5.1.</span> <a href="#orgf35dc8c">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -979,8 +979,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org16fab62" class="outline-2">
-<h2 id="org16fab62"><span class="section-number-2">6.</span> <a href="#org16fab62">我想玩的</a></h2>
+<div id="outline-container-org0fd8c10" class="outline-2">
+<h2 id="org0fd8c10"><span class="section-number-2">6.</span> <a href="#org0fd8c10">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1003,7 +1003,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-16 15:24</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-19 03:04</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-20 03:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
