--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-19 03:04 -->
+<!-- 2022-10-20 03:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -36,17 +36,17 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0e531e4">1. 一大早</a></li>
-<li><a href="#orgb3208da">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org3d44ee0">3. 科研训练</a></li>
-<li><a href="#org28b18d0">4. 520</a></li>
+<li><a href="#orgeefa2b3">1. 一大早</a></li>
+<li><a href="#org23bd0c0">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#orgb375f05">3. 科研训练</a></li>
+<li><a href="#orgcfc030a">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org0e531e4" class="outline-2">
-<h2 id="org0e531e4"><span class="section-number-2">1.</span> <a href="#org0e531e4">一大早</a></h2>
+<div id="outline-container-orgeefa2b3" class="outline-2">
+<h2 id="orgeefa2b3"><span class="section-number-2">1.</span> <a href="#orgeefa2b3">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -55,8 +55,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb3208da" class="outline-2">
-<h2 id="orgb3208da"><span class="section-number-2">2.</span> <a href="#orgb3208da">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-org23bd0c0" class="outline-2">
+<h2 id="org23bd0c0"><span class="section-number-2">2.</span> <a href="#org23bd0c0">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -82,8 +82,8 @@
 </div>
 </div>
 
-<div id="outline-container-org3d44ee0" class="outline-2">
-<h2 id="org3d44ee0"><span class="section-number-2">3.</span> <a href="#org3d44ee0">科研训练</a></h2>
+<div id="outline-container-orgb375f05" class="outline-2">
+<h2 id="orgb375f05"><span class="section-number-2">3.</span> <a href="#orgb375f05">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -91,8 +91,8 @@
 </div>
 </div>
 
-<div id="outline-container-org28b18d0" class="outline-2">
-<h2 id="org28b18d0"><span class="section-number-2">4.</span> <a href="#org28b18d0">520</a></h2>
+<div id="outline-container-orgcfc030a" class="outline-2">
+<h2 id="orgcfc030a"><span class="section-number-2">4.</span> <a href="#orgcfc030a">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -106,7 +106,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-19 03:04</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-20 03:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
