--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-19 03:04 -->
+<!-- 2022-10-20 03:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -36,12 +36,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org157227e">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#orga71e314">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#orga011aaf">1.1. window config &amp; register</a></li>
-<li><a href="#org5d830f9">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#orgf74dce5">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#orga181c7f">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#orgfca280d">1.1. window config &amp; register</a></li>
+<li><a href="#org7dcd3e6">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#orgeee8e04">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#orga39a6ca">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -49,12 +49,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org157227e" class="outline-2">
-<h2 id="org157227e"><span class="section-number-2">1.</span> <a href="#org157227e">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-orga71e314" class="outline-2">
+<h2 id="orga71e314"><span class="section-number-2">1.</span> <a href="#orga71e314">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orga011aaf" class="outline-3">
-<h3 id="orga011aaf"><span class="section-number-3">1.1.</span> <a href="#orga011aaf">window config &amp; register</a></h3>
+<div id="outline-container-orgfca280d" class="outline-3">
+<h3 id="orgfca280d"><span class="section-number-3">1.1.</span> <a href="#orgfca280d">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -68,8 +68,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-org5d830f9" class="outline-3">
-<h3 id="org5d830f9"><span class="section-number-3">1.2.</span> <a href="#org5d830f9"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-org7dcd3e6" class="outline-3">
+<h3 id="org7dcd3e6"><span class="section-number-3">1.2.</span> <a href="#org7dcd3e6"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -92,8 +92,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgf74dce5" class="outline-3">
-<h3 id="orgf74dce5"><span class="section-number-3">1.3.</span> <a href="#orgf74dce5"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-orgeee8e04" class="outline-3">
+<h3 id="orgeee8e04"><span class="section-number-3">1.3.</span> <a href="#orgeee8e04"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -106,8 +106,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orga181c7f" class="outline-3">
-<h3 id="orga181c7f"><span class="section-number-3">1.4.</span> <a href="#orga181c7f"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-orga39a6ca" class="outline-3">
+<h3 id="orga39a6ca"><span class="section-number-3">1.4.</span> <a href="#orga39a6ca"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -126,7 +126,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-19 03:04</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-20 03:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
